# profile

./: .gitignore  CNAME  dune-project  index.html  package-lock.json  package.json  profile.opam  resume.html  resume.md  tailwind.config.js  wrangler.toml
.github/workflows/: deploy.yml  static.yml
assets/: style.css
content/: about.md
content/posts/: postgresql-s3-pgmoneta.md
docs/: ocaml-static-site-rewrite-plan.md
lib/: content.ml  content.mli  dune  markdown.ml  markdown.mli  post.ml  post.mli  render.ml  render.mli  routes.ml  routes.mli  site.ml  site.mli
public/: index.html  manifest.json  resume.tex
scripts/: generate-resume-assets.js
src/: App.css  App.js  index.css  styles.css  vim.js
static/: keys.js  scroll.js
test/: dune
